--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
-<html xmlns:layout="http://www.w3.org/1999/xhtml" xmlns:th="http://www.w3.org/1999/xhtml" layout:decorate="~{layout}">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8" />
     <title>Sistema Help Desk ::: Home</title>
-    <!-- Import Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Import Google Icon Font -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css" media="screen,projection" />
+    
     <style>
         body {
             background-color: #f0f8ff;
@@ -34,15 +31,15 @@
         .header .nav-buttons a,
         .header .nav-buttons button {
             color: #fff;
-            background-color: #696969;
-            border-color: #696969;
+            background-color: #007bff;
+            border-color: #007bff;
         }
 
         .header .nav-buttons a:hover,
         .header .nav-buttons button:hover {
             color: #fff;
-            background-color: #494949;
-            border-color: #494949;
+            background-color: #0356af;
+            border-color: #0356af;
         }
 
         main {
@@ -54,16 +51,18 @@
 
         .jumbotron {
             background-color: #ffffff;
-            padding: 8rem 1rem;
+            padding: 9rem 1rem;
             text-align: center;
         }
 
         .jumbotron .container {
-            max-width: 600px;
+            max-width: 900px;
+            margin: auto;
         }
 
         .album {
             padding: 2rem 0;
+            background-color: #f8f9fa;
         }
 
         .card {
@@ -76,91 +75,135 @@
             background-color: #f8f9fa;
             border-top: 1px solid #dee2e6;
         }
+
+        .highlight-text {
+            color: #007bff;
+            font-weight: bold;
+        }
+
+        .card-body {
+            text-align: justify;
+            padding: 1rem;
+        }
+
+        .card-title {
+            font-size: 1.25rem;
+            font-weight: bold;
+            margin-bottom: 0.5rem;
+        }
+
+        .card-text {
+            font-size: 1rem;
+            margin-bottom: 1rem;
+        }
+
+        .btn-outline-secondary {
+            color: #fff;
+            background-color: #007bff;
+            border-color: #007bff;
+        }
+
+        .btn-outline-secondary:hover {
+            color: #fff;
+            background-color: #0356af;
+            border-color: #0356af;
+        }
     </style>
 </head>
 
 <body>
 
-    <section class="layout-content" layout:fragment="corpo">
-        <header class="header">
-            <div class="logo">
-                <p style="margin: 1rem; font-size: 1.3rem;">DEMO</p>
-            </div>
-            <div class="nav-buttons">
-                <a href="/login" class="btn btn-outline-secondary">Entrar</a>
-                <a href="/register" class="btn btn-outline-success">Cadastrar</a>
-                <form th:action="@{/logout}" method="post" style="display:inline;">
-                    <button type="submit" class="btn btn-outline-danger">Sair</button>
-                </form>
-            </div>
-        </header>
-        <main role="main">
-            <section class="jumbotron">
-                <div class="container">
-                    <h1 class="jumbotron-heading">SISTEMA HELP DESK</h1>
-                    <p class="lead text-muted">Bem-vindo ao Sistema Help Desk. Aqui você pode gerenciar seus chamados e
-                        solicitações de suporte.</p>
-                    <a href="#dale" class="btn btn-primary my-2">Saiba mais</a>
-                </div>
-            </section>
+    <header class="header">
+        <div class="logo">
+            <p style="margin: 1rem; font-size: 1.3rem;">DEMO</p>
+        </div>
+        <div class="nav-buttons">
+            <a href="/login" class="btn btn-outline-secondary">Entrar</a>
+            <a href="/register" class="btn btn-outline-success">Cadastrar</a>
+            <form action="/logout" method="post" style="display:inline;">
+                <button type="submit" class="btn btn-outline-danger">Sair</button>
+            </form>
+        </div>
+    </header>
 
-            <div class="album bg-light">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-4">
-                            <div class="card mb-4 box-shadow">
-                                <img class="card-img-top" th:src="@{materialize/image/iconDataAnalisy.png}" alt="Feature 1">
-                                <div class="card-body">
-                                    <h5 class="card-title">Gerenciamento de Chamados</h5>
-                                    <p class="card-text">Permite aos usuários criar, atualizar e acompanhar o status dos chamados de suporte. Os agentes de suporte podem atribuir, priorizar e resolver esses chamados, garantindo que todos os problemas sejam tratados de maneira eficiente.</p>
-                                    <div class="d-flex justify-content-between align-items-center">
-                                        <a href="/dale" class="btn btn-sm btn-outline-secondary">Ver Detalhes</a>
-                                        <small class="text-muted">9 mins</small>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="card mb-4 box-shadow">
-                                <img class="card-img-top" th:src="@{materialize/image/iconDataAnalisy.png}" alt="Feature 2">
-                                <div class="card-body">
-                                    <h5 class="card-title">Dashboard</h5>
-                                    <p class="card-text">Gera relatórios detalhados sobre o desempenho do suporte, incluindo métricas como o tempo médio de resposta, tempo de resolução, satisfação do cliente e volume de chamados. Essas análises ajudam na identificação de áreas de melhoria e no planejamento estratégico do suporte.</p>
-                                    <div class="d-flex justify-content-between align-items-center">
-                                        <button class="btn btn-sm btn-outline-secondary">Ver Detalhes</button>
-                                        <small class="text-muted">12 mins</small>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="card mb-4 box-shadow">
-                                <img class="card-img-top" th:src="@{materialize/image/iconDataAnalisy.png}" alt="Feature 3">
-                                <div class="card-body">
-                                    <h5 class="card-title">Otimização</h5>
-                                    <p class="card-text">Permite a automação de tarefas repetitivas e definição de regras de negócio para direcionar chamados, priorizar problemas e notificar usuários. Isso reduz o tempo de resposta e melhora a eficiência do suporte, garantindo que os problemas sejam resolvidos de forma rápida e organizada.</p>
-                                    <div class="d-flex justify-content-between align-items-center">
-                                        <button class="btn btn-sm btn-outline-secondary">Ver Detalhes</button>
-                                        <small class="text-muted">15 mins</small>
-                                    </div>
+    <main role="main">
+        <section class="jumbotron">
+            <div class="container">
+                <h1 class="jumbotron-heading">Plataforma de Suporte de gerenciamento de tickets e
+                    melhora a comunicação com os clientes.</h1>
+                <p class="lead text-muted">Bem-vindo ao Sistema Help Desk. Aqui você pode gerenciar seus chamados e
+                    solicitações de suporte.</p>
+                <a href="#info" class="btn btn-primary my-2" id="saiba-mais-btn">Saiba mais</a>
+            </div>
+        </section>
+
+        <div id="info" class="album">
+            <div class="container">
+                <h2 class="highlight-text text-center mb-4">Confira Nossas Funcionalidades Incríveis!</h2>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="card mb-4 box-shadow">
+                            <img class="card-img-top" src="materialize/image/iconDataAnalisy.png" alt="Feature 1">
+                            <div class="card-body" >
+                                <h5 class="card-title">Gerenciamento de Chamados</h5>
+                                <p class="card-text">Permite aos usuários criar, atualizar e acompanhar o status dos
+                                    chamados de suporte. Os agentes de suporte podem atribuir, priorizar e resolver
+                                    esses chamados que foram criados, garantindo que todos os problemas sejam tratados de maneira
+                                    eficiente.</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <a href="/dale" class="btn btn-sm btn-outline-secondary">Ver Detalhes</a>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-        </main>
-    </section>
+                    <div class="col-md-4">
+                        <div class="card mb-4 box-shadow">
+                            <img class="card-img-top" src="materialize/image/iconDataAnalisy.png" alt="Feature 2">
+                            <div class="card-body">
+                                <h5 class="card-title">Dashboard</h5>
+                                <p class="card-text">Gera relatórios detalhados sobre o desempenho do suporte, incluindo
+                                    métricas como o tempo médio de resposta, tempo de resolução, satisfação do cliente e
+                                    volume de chamados. Essas análises ajudam na identificação de áreas de melhoria e no
+                                    planejamento estratégico do suporte.</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                 
+                                    <button class="btn btn-sm btn-outline-secondary">Ver Detalhes</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card mb-4 box-shadow">
+                            <img class="card-img-top" src="materialize/image/iconDataAnalisy.png" alt="Feature 3">
+                            <div class="card-body">
+                                <h5 class="card-title">Automação de Fluxo</h5>
+                                <p class="card-text">Permite a automação de tarefas repetitivas e definição de regras de negócio para direcionar chamados,
+                                     priorizar problemas e notificar usuários. Isso reduz o tempo de resposta e melhora a eficiência do suporte,
+                                     garantindo que os problemas sejam resolvidos de forma rápida e organizada.</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <button class="btn btn-sm btn-outline-secondary">Ver Detalhes</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
+    </main>
     <footer class="footer">
         <div class="container">
             <p>&copy; 2024 Sistema Help Desk, Inc. Todos os direitos reservados.</p>
         </div>
     </footer>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('#saiba-mais-btn').click(function (event) {
+                event.preventDefault();
+                $('html, body').animate({
+                    scrollTop: $("#info").offset().top
+                }, 1000);
+            });
+        });
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
-
-</html>
