--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -118,7 +118,7 @@
             <p style="margin: 1rem; font-size: 1.3rem;">DEMO</p>
         </div>
         <div class="nav-buttons">
-            
+
             <!-- Verifica se o usuário NÃO está autenticado -->
             <a th:href="@{/login}" class="btn btn-outline-secondary" th:if="${!isAuthenticated}">Entrar</a>
 
@@ -126,11 +126,15 @@
             <a th:href="@{/u/novo/cadastro}" class="btn btn-outline-secondary"
                 th:if="${!isAuthenticated}">Cadastrar-se</a>
 
+            
 
-            <form th:action="@{/logout}" method="post" style="display:inline;">
-                <i class="fas fa-user"></i> <span class="">Bob</span>
+
+            <form th:action="@{/logout}" method="post" style="display:inline;" th:if="${isAuthenticated}">
+                <i class="fas fa-user"></i> <span th:text="${userEmail}"></span>
                 <button type="submit" class="btn btn-outline-danger">Sair</button>
             </form>
+
+            
         </div>
     </header>
 
@@ -141,7 +145,10 @@
                     melhora a comunicação com os clientes.</h1>
                 <p class="lead text-muted">Bem-vindo ao Sistema Help Desk. Aqui você pode gerenciar seus chamados e
                     solicitações de suporte.</p>
+                    <a th:href="@{/admin/painel}" class="btn btn-outline-secondary" th:if="${isAdmin}">Painel Admin</a>
+
                 <a href="#info" class="btn btn-primary my-2" id="saiba-mais-btn">Saiba mais</a>
+                
             </div>
         </section>
 
