configurando save de chamado por id de colaboradores

--- a/src/main/resources/templates/index/principal.html
+++ b/src/main/resources/templates/index/principal.html
@@ -232,7 +232,7 @@
                         <h2 class="subtitulo">Gerenciamento
                             <p class="lead">
                                 <a href="/dashboard">Consultar Tickets</a>
-                                <a href="/abrirticket">Abrir Ticket</a>
+                                <a th:href="@{/chamado}" class="btn btn-outline-primary">Abrir Ticket</a>
                             </p>
                         </h2>
                     </div>
