projetando search chamados

--- a/src/main/resources/templates/index/principal.html
+++ b/src/main/resources/templates/index/principal.html
@@ -231,7 +231,7 @@
                     <div class="col-md-4">
                         <h2 class="subtitulo">Gerenciamento
                             <p class="lead">
-                                <a href="/dashboard">Consultar Tickets</a>
+                                <a th:href="@{/consultar}">Consultar Tickets</a>
                                 <a th:href="@{/chamado}" class="btn btn-outline-primary">Abrir Ticket</a>
                             </p>
                         </h2>
