--- a/src/main/resources/templates/searchchamado.html
+++ b/src/main/resources/templates/searchchamado.html
@@ -1,31 +1,86 @@
 <!DOCTYPE html>
-<html xmlns:th="http://thymeleaf.org"
-	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-<head>
-	<title>EventosApp</title>
-	 <!--Import Google Icon Font-->
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
-      <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
+<html xmlns:th="http://www.thymeleaf.org">
 
-      <!--Let browser know website is optimized for mobile-->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-      <link rel="stylesheet" href="style/styleCss.css"/>
+<head>
+    <meta charset="UTF-8" />
+    <title>EventosApp</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            background-color: #f0f8ff;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            margin: 0;
+            font-family: Arial, sans-serif;
+        }
+
+        .container {
+            max-width: 800px; /* Define a largura máxima da tabela */
+            margin: 0 auto; /* Centraliza a tabela na página */
+            padding: 20px;
+        }
+
+        h1 {
+            text-align: center; /* Centraliza o título */
+            margin-bottom: 20px;
+        }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            border-spacing: 0;
+        }
+
+        th, td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: left;
+        }
+
+        th {
+            background-color: #f2f2f2;
+        }
+
+        tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+
+        tr:hover {
+            background-color: #ddd;
+        }
+
+    </style>
 </head>
+
 <body>
-    <h1>lista de chamados</h1>
-    <div th:each="chamado : ${chamados}">
-        <div class="row">
-            <p><span th:text="${chamado.colaborador.nome}"></span></p>
-            <p><span th:text="${chamado.id}"></span></p>
-            <p><span th:text="${chamado.titulo}"></span></p>
-            <p><span th:text="${chamado.descricao}"></span></p>
-            <p><span th:text="${chamado.status}"></span></p>
-            <p><span th:text="${chamado.dataCriacao}"></span></p>
-            <p><span th:text="${chamado.dataAtualizacao}"></span></p>
-            <p><span th:text="${chamado.colaborador.id}"></span></p>
-        </div>
+    <div class="container">
+        <h1>lista de chamados</h1>
+        <table>
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Nome</th>
+                    <th>Titulo</th>
+                    <th>Descrição</th>
+                    <th>Status</th>
+                    <th>Data da Criação</th>
+                    <th>AÇÃO</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="chamado : ${chamados}">
+                    <td><span th:text="${chamado.id}"></span></td>
+                    <td><span th:text="${chamado.colaborador.nome}"></span></td>
+                    <td><span th:text="${chamado.titulo}"></span></td>
+                    <td><span th:text="${chamado.descricao}"></span></td>
+                    <td><span th:text="${chamado.status}"></span></td>
+                    <td><span th:text="${chamado.dataCriacao}"></span></td>
+                    <td><span  style="margin: 20px;" href="/sell">icon ver </span></td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </body>
-      
+
 </html>
